--- a/main/appsettings.json
+++ b/main/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "multimedia_database": {
+    "connection_string": "mongodb://localhost:27017",
+    "database_name": "MMI",
+    "work_collection_name": "work"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
