--- a/main/appsettings.json
+++ b/main/appsettings.json
@@ -1,8 +1,8 @@
 {
-  "multimedia_database": {
+  "work_database_video": {
     "connection_string": "mongodb://localhost:27017",
-    "database_name": "MMI",
-    "work_collection_name": "work"
+    "database_name": "work",
+    "work_collection_name": "video"
   },
   "Logging": {
     "LogLevel": {
