--- a/main/appsettings.json
+++ b/main/appsettings.json
@@ -2,7 +2,7 @@
   "work_database_video": {
     "connection_string": "mongodb://localhost:27017",
     "database_name": "work",
-    "work_collection_name": "video"
+    "collection_name": "video"
   },
   "Logging": {
     "LogLevel": {
